small screen fixes: make row proportional and weird word alignment on certain screens

--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,4 +1,6 @@
 .row {
+    display: flex;
+    align-items: center;
     text-align: center;
     justify-content: center;
     align-content: center;
@@ -45,12 +47,13 @@
     font-size: 18px;
     font-weight: 400;
     margin: 0;
+    line-height: 1;
 }
 
 @media only screen and (max-width: 600px) {
     .row {
-        height: 100px;
-        width: 430px;
+        height: calc((100vw - 10px * 5) / 4);
+        width: calc(100vw - 10px * 5 + 30px);
     }
 }
 
