--- a/src/components/Square.css
+++ b/src/components/Square.css
@@ -1,5 +1,7 @@
 /* not selected: rgb(239, 239, 230) black text */
 .square {
+    display: flex;
+    align-items: center;
     text-align: center;
     justify-content: center;
     align-content: center;
@@ -14,6 +16,7 @@
     font-size: 18px;
     font-weight: 700;
     color: black;
+    line-height: 1;
 }
 
 /* selected: rgb(90, 89, 78) white text */
